@@ -33,28 +33,29 @@ import JobTestHelpers._
  * Holds the input and expected data
  * for the test.
  */
-object PagePingCfLineTest {
+object Sep2013CfLineTest {
 
+  // TODO: this line needs updating from logs
   val lines = Lines(
-    "2013-03-25 02:04:00    GRU1    1047    255.255.255.255    GET d10wr4jwvp55f9.cloudfront.net   /i  200 http://www.psychicbazaar.com/2-tarot-cards/genre/all/type/all?utm_source=google&utm_medium=cpc&utm_term=buy%2Btarot&utm_campaign=spring_sale  Mozilla/5.0%20(Windows%20NT%206.1;%20WOW64)%20AppleWebKit/537.22%20(KHTML,%20like%20Gecko)%20Chrome/25.0.1364.172%20Safari/537.22   &e=pp&page=Tarot%2520cards%2520-%2520Psychic%2520Bazaar&pp_mix=21&pp_max=214&pp_miy=251&pp_may=517&dtm=1364177017342&tid=128574&vp=1366x630&ds=1349x3787&vid=1&duid=132e226e3359a9cd&p=web&tv=js-0.11.1&fp=1640945579&aid=pbzsite&lang=pt-BR&cs=UTF-8&tz=America%252FSao_Paulo&refr=http%253A%252F%252Fwww.psychicbazaar.com%252F2-tarot-cards%252Fgenre%252Fall%252Ftype%252Fall%253Fn%253D48&f_pdf=1&f_qt=0&f_realp=1&f_wma=0&f_dir=0&f_fla=1&f_java=1&f_gears=0&f_ag=1&res=1366x768&cd=32&cookie=1&url=http%3A%2F%2Fwww.psychicbazaar.com%2F2-tarot-cards%2Fgenre%2Fall%2Ftype%2Fall%3Futm_source%3Dgoogle%26utm_medium%3Dcpc%26utm_term%3Dbuy%252Btarot%26utm_campaign%3Dspring_sale -   Hit dfFVXBxYoXbfL3TBTlr6Q-_TFqzLujgZBfuAa80qB9ND22Cn5lqJdg=="
+    "2013-08-29	00:18:48	LAX3	830	255.255.255.255	GET	d3v6ndkyapxc2w.cloudfront.net	/i	200	http://snowplowanalytics.com/analytics/index.html	Mozilla/5.0%20(Windows%20NT%205.1;%20rv:23.0)%20Gecko/20100101%20Firefox/23.0	e=pv&page=Introduction%20-%20Snowplow%20Analytics%25&dtm=1377735557970&tid=567074&vp=1024x635&ds=1024x635&vid=1&duid=7969620089de36eb&p=web&tv=js-0.12.0&fp=308909339&aid=fixme&lang=en-US&cs=UTF-8&tz=America%2FLos_Angeles&refr=http%3A%2F%2Fwww.metacrawler.com%2Fsearch%2Fweb%3Ffcoid%3D417%26fcop%3Dtopnav%26fpid%3D27%26q%3Dsnowplow%2Banalytics%26ql%3D&f_pdf=1&f_qt=1&f_realp=0&f_wma=1&f_dir=0&f_fla=1&f_java=1&f_gears=0&f_ag=0&res=1024x768&cd=24&cookie=1&url=http%3A%2F%2Fsnowplowanalytics.com%2Fanalytics%2Findex.html	-	Hit	wQ1OBZtQlGgfM_tPEJ-lIQLsdra0U-lXgmfJfwja2KAV_SfTdT3lZg=="
     )
 
   val expected = List(
-    "pbzsite",
+    "snowplowweb",
     "web",
-    "2013-03-25 02:04:00.000",
-    "2013-03-25 02:03:37.342",
-    "page_ping",
+    "2013-08-29 00:18:48.000",
+    "2013-08-29 00:19:17.970",
+    "page_view",
     "com.snowplowanalytics",
     null, // We can't predict the event_id
-    "128574",
-    "js-0.11.1",
+    "567074",
+    "js-0.12.0",
     "cloudfront",
     EtlVersion,
     null, // No user_id set
     "255.255.255.255",
-    "1640945579",
-    "132e226e3359a9cd",
+    "308909339",
+    "7969620089de36eb",
     "1",
     null, // No network_userid set
     null, // No geo-location for this IP address
@@ -64,28 +65,28 @@ object PagePingCfLineTest {
     null,
     null,
     // Raw page URL is discarded 
-    "Tarot cards - Psychic Bazaar",
+    "Introduction - Snowplow Analytics%",
     // Raw referer URL is discarded
     "http",
-    "www.psychicbazaar.com",
+    "snowplowanalytics.com",
     "80",
-    "/2-tarot-cards/genre/all/type/all",
-    "utm_source=google&utm_medium=cpc&utm_term=buy+tarot&utm_campaign=spring_sale",
+    "/analytics/index.html",
+    null,
     null,
     "http",
-    "www.psychicbazaar.com",
+    "www.metacrawler.com",
     "80",
-    "/2-tarot-cards/genre/all/type/all",
-    "n=48",
+    "/search/web",
+    "fcoid=417&fcop=topnav&fpid=27&q=snowplow+analytics&ql=",
     null,
-    "internal", // Internal referer
-    null,
-    null,
-    "cpc",
-    "google",
-    "buy tarot",
-    null,
-    "spring_sale",
+    "search", // Search referer
+    "InfoSpace",
+    "snowplow analytics",
+    null, // Marketing campaign fields empty
+    null, //
+    null, //
+    null, //
+    null, //
     null, // Event fields empty
     null, //
     null, //
@@ -105,62 +106,65 @@ object PagePingCfLineTest {
     null, //
     null, //
     null, //
-    "21",  // Page ping fields are set
-    "214", //
-    "251", //
-    "517", //
-    "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.22 (KHTML, like Gecko) Chrome/25.0.1364.172 Safari/537.22",
-    "Chrome",
-    "Chrome",
-    "25.0.1364.172", // Yech. We need to upgrade our UA library
+    null, // Page ping fields empty
+    null, //
+    null, //
+    null, //
+    "Mozilla/5.0 (Windows NT 5.1; rv:23.0) Gecko/20100101 Firefox/23.0",
+    "Firefox 2",
+    "Firefox",
+    "23.0",
     "Browser",
-    "WEBKIT",
-    "pt-BR",
+    "GECKO",
+    "en-US",
     "1",
     "1",
     "1",
     "0",
+    "1",
     "0",
     "1",
     "0",
     "0",
     "1",
-    "1",
-    "32",
-    "1366",
-    "630",
+    "24",
+    "1024",
+    "635",
     "Windows",
     "Windows",
     "Microsoft Corporation",
-    "America/Sao_Paulo",
+    "America/Los_Angeles",
     "Computer",
     "0",
-    "1366",
+    "1024",
     "768",
     "UTF-8",
-    "1349",
-    "3787"
+    "1024",
+    "635"
     )
 }
 
 /**
  * Integration test for the EtlJob:
  *
- * Check that all tuples in a page ping
- * (CloudFront format) are successfully
- * extracted.
+ * Check that all tuples in a page view in the
+ * CloudFront format changed in September 2013
+ * are successfully extracted.
+ *
+ * For details:
+ * https://forums.aws.amazon.com/thread.jspa?threadID=134017&tstart=0#
  */
-class PagePingCfLineTest extends Specification with TupleConversions {
+class Sep2013CfLineTest extends Specification with TupleConversions {
 
   "A job which processes a CloudFront file containing 1 valid page ping" should {
     EtlJobTest("0").
-      source(MultipleTextLineFiles("inputFolder"), PagePingCfLineTest.lines).
+      source(MultipleTextLineFiles("inputFolder"), Sep2013CfLineTest.lines).
       sink[TupleEntry](Tsv("outputFolder")){ buf : Buffer[TupleEntry] =>
         "correctly output 1 page ping" in {
           buf.size must_== 1
           val actual = buf.head
-          for (idx <- PagePingCfLineTest.expected.indices) {
-            actual.getString(idx) must beFieldEqualTo(PagePingCfLineTest.expected(idx), withIndex = idx)
+          for (idx <- Sep2013CfLineTest.expected.indices) {
+            actual.getString(idx) must beFieldEqualTo(Sep2013CfLineTest.expected(idx), withIndex = idx)
           }
         }
       }.
